@@ -1,3 +1,10 @@
+2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/AttributeChangeNotificationFilter.java:
+	Correct typo.
+	* javax/management/NotificationFilterSupport.java:
+	New file.
+	
 2007-01-21  Mark Wielaard  <mark@klomp.org>
 
 	* java/security/SecureClassLoader.java (defineClass): Method returns
